# beodata

./: .cursorignore  .cursorrules  .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  cli.py  db.py  explore_beowulf.py  mcp_config.json  mcp_probe.py  mcp_server.py  pyproject.toml  scribal_differences_exploration.py
.claude/: settings.local.json
.github/workflows/: python-app.yml
assets/: README-alignment.md  __init__.py  aligned_with_brunetti.txt  brunanburh.html  brunanburh_normalized.html  loader.py  maldon.html  maldon_oea.html
beodata/: bosworth.py  cli.py  db.py  logging_config.py
beodata/assets/: __init__.py  loader.py
beodata/parse/: fetch.py  heorot.py  parser.py
beodata/sources/: abbreviations.py  bosworth.py  fetch.py  heorot.py  parser.py
beodata/subtitle/: constants.py
beodata/text/: numbering.py
beodata/writers/: __init__.py  ass_writer.py  base_writer.py  csv_writer.py  json_writer.py
beowulf_mcp/: __init__.py  __main__.py  cli.py  config.json  db.py  mcp_probe.py  probe.py  server.py
findings/: explore_beowulf-0.1.2.md  explore_beowulf.md  kennings.md  sword-naming-0.1.3-unreleased.md  w-alliteration-0.1.2-release.md  w-alliteration-0.1.2.md  w-alliteration.md
repl/: __main__.py
sources/: abbreviations.py  align_brunetti.py  align_sources.py  analytical_lexicon.py  bosworth.py  brunanburh.py  brunanburh_normalized.py  brunetti.py  ebeowulf.py  heorot.py  mcmaster.py  mit.py  oldenglishaerobics.py  perseus.py
tests/: conftest.py  test_abbreviations.py  test_align_brunetti.py  test_align_sources.py  test_analytical_lexicon.py  test_bosworth.py  test_brunanburh.py  test_brunanburh_normalized.py  test_brunetti.py  test_ebeowulf.py  test_explore_findings.py  test_fitts.py  test_heorot.py  test_mcmaster.py  test_mit.py  test_models.py  test_numbering.py  test_oldenglishaerobics.py  test_perseus.py  test_scribal_differences.py  test_server.py
tests/beowulf_mcp/: __init__.py  test_server.py
tests/data/fitts/: .gitignore  maintext.csv  maintext.json
tests/data/subtitles/: .gitignore  fitt_0.ass  fitt_10.ass  fitt_12.ass  fitt_13.ass  fitt_15.ass  fitt_16.ass  fitt_17.ass  fitt_19.ass  fitt_2.ass  fitt_21.ass  fitt_22.ass  fitt_23.ass  fitt_25.ass  fitt_26.ass  fitt_30.ass  fitt_31.ass  fitt_32.ass  fitt_36.ass  fitt_37.ass  fitt_38.ass  fitt_39.ass  fitt_4.ass  fitt_41.ass  fitt_43.ass  fitt_5.ass  fitt_6.ass  fitt_9.ass
tests/parse/: test_heorot.py
tests/sources/: test_abbreviations.py  test_bosworth.py  test_heorot.py
tests/text/: test_models.py  test_numbering.py
text/: models.py  numbering.py
writers/: __init__.py  ass_writer.py  base_writer.py  csv_writer.py  json_writer.py
