[project]
name = "beodata"
version = "0.1.0"
description = ""
authors = [
    {name = "Callie Tweney",email = "cat@pobox.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
