[tool.poetry]
name = "beodata"
version = "0.1.0"
description = ""
authors = ["Callie Tweney <cat@pobox.com>"]
readme = "README.md"
packages = [{"include" = "beodata"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pytest = ">=8.4.1,<9.0.0"
pysubs2 = ">=1.6.0,<2.0.0"
requests = ">=2.31.0,<3.0.0"
structlog = ">=23.0.0,<24.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
