[tool.poetry]
name = "beodata"
version = "0.1.0"
description = ""
authors = ["Callie Tweney <cat@pobox.com>"]
readme = "README.md"
packages = [
    {"include" = "beodata"},
    {"include" = "beowulf_mcp"}
]
include = [
    "beodata/assets/*.ass",
    "beodata/assets/*.csv",
    "beodata/assets/*.duckdb",
    "beodata/assets/*.json",
]

[tool.poetry.dependencies]
python = "^3.13"
duckdb = "^1.2.0"
pysubs2 = ">=1.6.0,<2.0.0"
requests = ">=2.31.0,<3.0.0"
structlog = ">=25.0.0,<26.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"

black = "^26.1.0"
flake8 = "^7.0.0"
isort = "^7.0.0"
mypy = "^1.19.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
types-requests = "^2.32.0"
pre-commit = "^4.2.0"
mcp = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.3.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=beodata",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# handy run target definitions: here is your entry point to fetch and sources data
[tool.poetry.scripts]
heorot = "beodata.cli:run"
model_dump = "beodata.cli:model_dump"
server = "beowulf_mcp.server:run_server"
